[gd_scene load_steps=5 format=3 uid="uid://bjhkne5qphrbf"]

[ext_resource type="Script" uid="uid://dm8v1sdbyk3dj" path="res://scripts/temp_platform.gd" id="1_1v276"]
[ext_resource type="Texture2D" uid="uid://b111182o0dsgs" path="res://assets/sprites/platforms.png" id="2_h46wu"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ppcth"]
size = Vector2(29, 8)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_yo7re"]
size = Vector2(31, 8)

[node name="temp_platform" type="StaticBody2D"]
script = ExtResource("1_1v276")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_h46wu")
region_enabled = true
region_rect = Rect2(15.8359, 47.1604, 32.1879, 10.4167)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0.5, 0)
shape = SubResource("RectangleShape2D_ppcth")

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 3
collision_mask = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(0.5, -1)
shape = SubResource("RectangleShape2D_yo7re")

[node name="Timer" type="Timer" parent="."]
one_shot = true

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
